--- a/src/Azure/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
+++ b/src/Azure/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
@@ -12,7 +12,7 @@
       <FileVersion>2.6.204.0</FileVersion>
       <AssemblyVersion>2.0.0.0</AssemblyVersion>
       <Description>Provides Storage.Net integration with Azure Service Fabric. This library implements Reliable Storage as Blobs and Messages.</Description>
-      <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
+      <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
       <SignAssembly>true</SignAssembly>
       <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
    </PropertyGroup>
@@ -23,6 +23,6 @@
       <PackageReference Include="Microsoft.ServiceFabric.Data" Version="3.2.162" />
    </ItemGroup>
    <ItemGroup>
-      <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
+      <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
    </ItemGroup>
 </Project>
