--- a/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.6;net461</TargetFrameworks>
     <Description>Extension to Storage.Net providing integration with Microsoft Azure Key vault as a blob storage.</Description>
-    <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <Version>1.0.0-alpha-0</Version>
     <FileVersion>1.0.0.0</FileVersion>
@@ -25,6 +25,6 @@
      <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
+    <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
 </Project>
