--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,20 @@
 pool:
   vmImage: "Hosted VS2017"
 
+trigger:
+  batch: true
+  branches:
+    include:
+      - master
+
+pr:
+  branches:
+    include:
+      - master
+  paths:
+    exclude:
+      - README.md
+
 steps:
 - task: gittools.gitversion.gitversion-task.GitVersion@4
   displayName: GitVersion
