--- a/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -35,8 +35,9 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
    <ItemGroup>
-      <PackageReference Include="AWSSDK.Core" Version="3.3.25.3" />
-      <PackageReference Include="AWSSDK.S3" Version="3.3.23.2" />
+      <PackageReference Include="AWSSDK.Core" Version="3.3.31.12" />
+      <PackageReference Include="AWSSDK.S3" Version="3.3.31.20" />
+      <PackageReference Include="AWSSDK.SQS" Version="3.3.3.59" />
    </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
