exclude triggers for docs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ pr:
   paths:
     exclude:
       - README.md
+      - /doc/**/*
 
 steps:
 - task: gittools.gitversion.gitversion-task.GitVersion@4
