Table emulator tests (#69)
* docs and tests

* run azure emulator table tests in debug mode

* run emulator in debug only

--- a/azure-pipelines-integration.yml
+++ b/azure-pipelines-integration.yml
@@ -28,10 +28,10 @@ steps:
   displayName: build
   inputs:
     projects: test/Storage.Net.Tests.Integration
-    arguments: '-c debug'
+    arguments: '-c release'
 - task: DotNetCoreCLI@2
   displayName: 'run integration tests'
   inputs:
     command: test
     projects: test/Storage.Net.Tests.Integration
-    arguments: '-c debug -v d'
+    arguments: '-c release -v d'
