Amazon simple queue (#72)
* first successful SQS test

* message count for amazon sqs

* first implementation ready

* docs, undebug

* more docs

* do not run storage emulator tests

--- a/azure-pipelines-integration.yml
+++ b/azure-pipelines-integration.yml
@@ -25,13 +25,8 @@ steps:
   inputs:
     preferBundledVersion: false
 - task: DotNetCoreCLI@2
-  displayName: build
-  inputs:
-    projects: test/Storage.Net.Tests.Integration
-    arguments: '-c release'
-- task: DotNetCoreCLI@2
   displayName: 'run integration tests'
   inputs:
     command: test
     projects: test/Storage.Net.Tests.Integration
-    arguments: '-c release -v d'
+    arguments: '-c debug'
