--- a/test/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/test/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -19,13 +19,20 @@
     <ProjectReference Include="..\..\src\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LogMagic" Version="2.16.0" />
-    <PackageReference Include="Config.Net" Version="4.10.1" />
+    <PackageReference Include="LogMagic" Version="2.17.5" />
+    <PackageReference Include="Config.Net" Version="4.13.2" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <Reference Include="System" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+     <PackageReference Include="coverlet.msbuild" Version="2.6.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+     </PackageReference>
+     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
