a lot of small bugfixes
there are a lot of small fixes and most importantly huge improvements to the way integration tests are done

--- a/azure-pipelines-integration.yml
+++ b/azure-pipelines-integration.yml
@@ -40,6 +40,10 @@ steps:
     projects: ./src/storage.sln
     arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[xunit*]*%2c[*Test*]*" /p:CoverletOutput=$(Build.StagingDirectory)/coverage.xml'
 
+#- powershell: 'cat $(Build.StagingDirectory)/coverage.xml'
+#  errorActionPreference: silentlyContinue
+#  displayName: 'cat coverage.xml'
+
 - task: DotNetCoreCLI@2
   displayName: 'Begin SQ analysis'
   inputs:
