don't integration test on readme update

--- a/azure-pipelines-integration.yml
+++ b/azure-pipelines-integration.yml
@@ -6,6 +6,10 @@ trigger:
   branches:
     include:
       - master
+        paths:
+    exclude:
+      - README.md
+      - /doc/**/*
 
 pr:
   branches:
