--- a/src/Azure/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
@@ -1,37 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
-    <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
-    <AssemblyTitle>Storage.Net.Microsoft.Azure.EventHub</AssemblyTitle>
-    <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
-    <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Storage.Net.Microsoft.Azure.EventHub</PackageId>
-    <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
-    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50;portable-net451+win8</PackageTargetFallback>
-    <Version>1.0.0</Version>
-    <FileVersion>1.0.0.0</FileVersion>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="..\..\JsonExtensions.cs" Link="JsonExtensions.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="2.1.0" />
-    <PackageReference Include="NetBox" Version="2.1.8" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
-  </ItemGroup>
+   <PropertyGroup>
+      <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+      <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
+      <AssemblyTitle>Storage.Net.Microsoft.Azure.EventHub</AssemblyTitle>
+      <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
+      <GenerateDocumentationFile>true</GenerateDocumentationFile>
+      <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
+      <SignAssembly>true</SignAssembly>
+      <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
+      <PackageId>Storage.Net.Microsoft.Azure.EventHub</PackageId>
+      <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
+      <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
+      <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50;portable-net451+win8</PackageTargetFallback>
+      <Version>1.0.0</Version>
+      <FileVersion>1.0.0.0</FileVersion>
+      <AssemblyVersion>1.0.0.0</AssemblyVersion>
+      <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
+      <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
+      <RepositoryType>GitHub</RepositoryType>
+      <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
+      <LangVersion>latest</LangVersion>
+   </PropertyGroup>
+   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+      <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+   </PropertyGroup>
+   <ItemGroup>
+      <Compile Include="..\..\JsonExtensions.cs" Link="JsonExtensions.cs" />
+   </ItemGroup>
+   <ItemGroup>
+      <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.1.0" />
+      <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="2.1.0" />
+      <PackageReference Include="NetBox" Version="2.1.8" />
+   </ItemGroup>
+   <ItemGroup>
+      <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
+   </ItemGroup>
 </Project>
