--- a/test/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
+++ b/test/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netcoreapp2.1</TargetFrameworks>
     <AssemblyOriginatorKeyFile>../../src/storage.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
+     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
