--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,10 +123,16 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: DownloadBuildArtifacts@0
+            inputs:
+              buildType: 'current'
+              downloadType: 'single'
+              artifactName: 'nuget'
+              downloadPath: '$(System.ArtifactsDirectory)'
           - task: NuGetCommand@2
             displayName: nuget.org
             inputs:
               command: push
-              packagesToPush: '$(System.DefaultWorkingDirectory)/**/*.nupkg'
+              packagesToPush: '$(System.ArtifactsDirectory)/nuget/*.nupkg'
               nuGetFeedType: external
               publishFeedCredentials: 'nuget.org (aloneguid)'
