update fluentftp dependency, but also introduce polly to retry OpenWriteAsync as it fails too often

--- a/src/General/Storage.Net.Ftp/Storage.Net.Ftp.csproj
+++ b/src/General/Storage.Net.Ftp/Storage.Net.Ftp.csproj
@@ -8,7 +8,8 @@
    </PropertyGroup>
 
    <ItemGroup>
-      <PackageReference Include="FluentFTP" Version="23.1.0" />
+      <PackageReference Include="FluentFTP" Version="24.0.0" />
+      <PackageReference Include="Polly" Version="7.1.0" />
    </ItemGroup>
 
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
