--- a/build.ini
+++ b/build.ini
@@ -8,7 +8,7 @@ AuthorName=Ivan Gavryliuk (@aloneguid)
 RepoRoot=https://github.com/aloneguid/storage
 
 ;Authoring
-Version=%VersionMajor%.%VersionMinor%-alpha-%gitVersion.preReleaseNumber%
+Version=%gitVersion.semVer%
 FileVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%BuildNo%
 AssemblyVersion=%VersionMajor%.0.0.0
 Copyright=Copyright (c) 2015-%date:yyyy% by %AuthorName%
