--- a/src/Azure/Storage.Net.Microsoft.Azure.Storage/Storage.Net.Microsoft.Azure.Storage.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Storage/Storage.Net.Microsoft.Azure.Storage.csproj
@@ -33,11 +33,21 @@ new feature: Azure Blob Storage supports connection by container SAS URI</Packag
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+     
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.3" />
+     <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="10.0.3" />
+     <PackageReference Include="Microsoft.Azure.Storage.File" Version="10.0.3" />
   </ItemGroup>
    <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
       <Reference Include="System.Net.Http" />
    </ItemGroup>
+   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+      <!-- this is only available for .net standard 2.0 -->
+      <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.1" />
+   </ItemGroup>
+   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+      <DefineConstants>NETSTANDARD20</DefineConstants>
+   </PropertyGroup>
    <ItemGroup>
     <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
