--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,12 +92,13 @@ stages:
         extraProperties: 'sonar.cs.opencover.reportsPaths=$(Build.StagingDirectory)/coverage.xml'
 
     - task: DotNetCoreCLI@2
-      displayName: 'Integration and Unit Test (with coverlet)'
+      displayName: 'Integration Tests (with coverlet)'
       #continueOnError: true
       inputs:
         command: test
-        projects: ./src/storage.sln
-        arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[xunit*]*%2c[*Test*]*" /p:CoverletOutput=$(Build.StagingDirectory)/coverage.xml'
+        projects: ./test/Storage.Net.Test.Integration
+        #arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[xunit*]*%2c[*Test*]*" /p:CoverletOutput=$(Build.StagingDirectory)/coverage.xml'
+        arguments: '--filter Category=Other'
 
     #SQ requires building the whole solution, specifically from .sln file, otherwise everything fails miserably
     - task: DotNetCoreCLI@2
