--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,6 +74,7 @@ stages:
     pool:
       vmImage: 'windows-2019'
 
+    steps:
     - task: DotNetCoreCLI@2
       displayName: 'Integration Tests (with coverlet)'
       inputs:
@@ -85,6 +86,7 @@ stages:
     pool:
       vmImage: 'windows-2019'
 
+    steps:
     - task: DotNetCoreCLI@2
       displayName: 'Integration Tests (with coverlet)'
       inputs:
@@ -97,6 +99,7 @@ stages:
     pool:
       vmImage: 'windows-2019'
 
+    steps:
     - task: DotNetCoreCLI@2
       displayName: 'Integration Tests (with coverlet)'
       inputs:
@@ -109,6 +112,7 @@ stages:
     pool:
       vmImage: 'windows-2019'
 
+    steps:
     - task: DotNetCoreCLI@2
       displayName: 'Integration Tests (with coverlet)'
       inputs:
