--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,55 +70,40 @@ stages:
       inputs:
         ArtifactName: nuget
 
-  - job: IntegrationOther
+  - job: Integration
     pool:
       vmImage: 'windows-2019'
 
     steps:
+    - task: gittools.gitversion.gitversion-task.GitVersion@4
+      displayName: GitVersion
+      inputs:
+         preferBundledVersion: false
+
+    # init SonarCloud
+    - task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
+      displayName: 'Prepare analysis on SonarCloud'
+      inputs:
+        SonarCloud: SonarCloud
+        organization: aloneguid-github
+        projectKey: aloneguid_storage
+        projectName: 'Storage.Net'
+        projectVersion: '$(GitVersion.SemVer)'
+        extraProperties: 'sonar.cs.opencover.reportsPaths=$(Build.StagingDirectory)/coverage.xml'
+
     - task: DotNetCoreCLI@2
-      displayName: 'Integration Tests (with coverlet)'
+      displayName: 'Integration and Unit Test (with coverlet)'
+      continueOnError: true
       inputs:
         command: test
-        projects: ./test/Storage.Net.Test.Integration
-        arguments: '--filter Category=Other'
+        projects: ./src/storage.sln
+        arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[xunit*]*%2c[*Test*]*" /p:CoverletOutput=$(Build.StagingDirectory)/coverage.xml'
 
-  - job: IntegrationBlobs
-    pool:
-      vmImage: 'windows-2019'
-
-    steps:
-    - task: DotNetCoreCLI@2
-      displayName: 'Integration Tests (with coverlet)'
-      inputs:
-        command: test
-        projects: ./test/Storage.Net.Test.Integration
-        arguments: '--filter Category=Blobs'
-
-        
-  - job: IntegrationMessages
-    pool:
-      vmImage: 'windows-2019'
-
-    steps:
-    - task: DotNetCoreCLI@2
-      displayName: 'Integration Tests (with coverlet)'
-      inputs:
-        command: test
-        projects: ./test/Storage.Net.Test.Integration
-        arguments: '--filter Category=Messsages'
-
-        
-  - job: IntegrationKeyValue
-    pool:
-      vmImage: 'windows-2019'
-
-    steps:
-    - task: DotNetCoreCLI@2
-      displayName: 'Integration Tests (with coverlet)'
-      inputs:
-        command: test
-        projects: ./test/Storage.Net.Test.Integration
-        arguments: '--filter Category=KeyValue'
+    # finish Sonar analysis
+    - task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
+      displayName: 'SonarQube: Run Code Analysis'
+    - task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
+      displayName: 'SonarQube: Publish Quality Gate Result'
 
 
 - stage: Deploy
