--- a/src/Azure/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
+++ b/src/Azure/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-      <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0</TargetFrameworks>
       <RepositoryType>GitHub</RepositoryType>
       <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
       <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
