--- a/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
     <AssemblyTitle>Storage.Net.Amazon.Aws</AssemblyTitle>
-    <TargetFrameworks>netstandard1.6;net452</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Storage.Net.Amazon.Aws</AssemblyName>
     <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
@@ -26,9 +26,6 @@
    <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
       <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
    </PropertyGroup>
-   <PropertyGroup Condition=" '$(TargetFramework)' == 'net452' ">
-      <DefineConstants>$(DefineConstants);NETFULL</DefineConstants>
-   </PropertyGroup>
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
@@ -39,9 +36,5 @@
    </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 </Project>
