--- a/src/Azure/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-      <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0</TargetFrameworks>
       <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
       <AssemblyTitle>Storage.Net.Microsoft.Azure.EventHub</AssemblyTitle>
       <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
