--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,11 +37,15 @@ stages:
       inputs:
         name: housework
 
-    - script: 'housework  author src/*.csproj -s build.ini -r'
-      displayName: 'set build number'
+    - script: 'housework author src/*.csproj -s build.ini -r'
+      displayName: 'author projects'
 
     - script: 'housework setbuildnumber %Version% -s build.ini'
-      displayName: 'author csproj'
+      displayName: 'set build number'
+
+    - script: 'housework pushvars Version -s build.ini'
+      displayName: 'push variables'
+
 
     # init SonarCloud
     - task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
@@ -51,7 +55,7 @@ stages:
         organization: aloneguid-github
         projectKey: aloneguid_storage
         projectName: 'Storage.Net'
-        projectVersion: '$(GitVersion.SemVer)'
+        projectVersion: '$(Version)'
         extraProperties: 'sonar.cs.opencover.reportsPaths=$(Build.StagingDirectory)/coverage.xml'
 
     - task: DotNetCoreCLI@2
@@ -92,7 +96,7 @@ stages:
 
 - stage: Deploy
   #condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
-  condition: "or( eq(variables['Build.SourceBranch'], 'refs/heads/master'), eq(variables['Build.SourceBranch'], 'refs/heads/v7') )"
+  condition: "and( or( eq(variables['Build.SourceBranch'], 'refs/heads/master'), eq(variables['Build.SourceBranch'], 'refs/heads/v7') ), succeeded('Build') )"
   jobs:
   - deployment: NugetOrg
     pool:
